refactor and kotlin impl. of day7